# server

./: .gitignore  Pipfile  README.md  README_UPGRADE.md  api-doc.html  bootstrap_server.py  build_server.sh  embed-template.html  iamages-server.py  iamages_mkdb.py  iamages_replicator.py  iamages_server.py  iamages_updb.py  iamagesdb.sql  iamagesdb_create.py  privacy.html  pyproject.toml  requirements.txt  servercfg.json  start_dev_proxy.sh  start_dev_server.sh  start_dev_smtp.sh  start_prod_server.sh  store.sql  tos.html  traefik.toml  traefik_routes.toml
api/: main.py
api/common/: db.py  paths.py  security.py  settings.py  templates.py
api/models/: collection.py  collections.py  db.py  default.py  images.py  pagination.py  tokens.py  users.py
api/routers/: collections.py  feeds.py  images.py  legal.py  thumbnails.py  users.py
api/web/static/js/: decryption-worker.js
api/web/static/js/image/: decryption-worker.js  info.js  unlock.js
api/web/static/js/lib/: bulma-modal.js
api/web/templates/: embed-collection.html  embed-image.html  embed_collection.html  embed_file.html  embed_image.html  embed_user.html  forgot-password.html  forgot-password.txt  nsfw_toggle.html  nsfw_toggled.html  privacy.html  tos.html
isdbi/: isdbi.py
isupdb/: isupdb.py
scripts/: 3to4.py  README.md  common  common.py  dbctl.py  dbupgrade.py  decrypt_aes.py  dropdb.py  mkdb.py  modals  models  storagearchive.py
scripts/3to4/: 3to4.py  common  models
scripts/common/: auth.py  config.py  db.py  paths.py  templates.py
scripts/modals/: collection.py  file.py  user.py
server/: common.py  main.py
server/common/: auth.py  config.py  db.py  paths.py  utils.py
server/modals/: collection.py  file.py  user.py
server/routers/: collection.py  everyone.py  feed.py  file.py  legal.py  new.py  root.py  search.py  user.py
server/web/templates/: embed.html  embed_collection.html  embed_file.html  embed_user.html  nsfw_info.html  privacy.html  tos.html
templates/: api-doc.html  embed.html  privacy.html  tos.html
