[tool.poetry]
name = "iamages_server"
version = "4.0.0"
description = "Server for the Iamages service."
authors = ["Nam Thành Nguyễn <35841468+jkelol111@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
hypercorn = {extras = ["uvloop"], version = "^0.13.2"}
tqdm = "^4.64.0"
passlib = {extras = ["argon2", "bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"
python-magic = "^0.4.27"
motor = "^3.0.0"
rethinkdb = "^2.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
