[tool.poetry]
name = "iamages_server"
version = "4.0.0"
description = "Server for the Iamages service."
authors = ["Nam Thành Nguyễn <35841468+jkelol111@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.2"
passlib = {extras = ["argon2", "bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"
python-magic = "^0.4.27"
brotli-asgi = "^1.3.0"
orjson = "^3.8.5"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
Pillow = "^9.4.0"
pymongo = "^4.3.3"
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
tqdm = "^4.64.1"
pydantic = {extras = ["email"], version = "^1.10.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
